--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section id="about">
         <h2 class="section-header">About Me</h2>
         <div class="about-content">
-            <img src="assets/profile-placeholder.jpg" alt="Your Photo">
+            <img src="assets/favicon.png" alt="Your Photo">
             <p>
                 Hi there! I'm a 20-year-old web developer, studying Computer Science at the University of Derby, with a passion for creating interactive and user-friendly websites. I specialize in HTML, CSS, JavaScript, and PHP, and I'm currently diving into NetLogo to explore how simulations are made.
                 <br><br>
